welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (Int, Int)
		case (_,_,_) => return false
                     ^